Resolve "Fix deprecation"